# mcp-redfish

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.docker  E2E_TESTING.md  Makefile  README.md  code-of-conduct.md  fastmcp.json  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/workflows/: ci-cd.yml  codeql.yml  container.yml  dependency-updates.yml
docs/: RETRY_LOGIC.md
e2e/: conftest.py  framework.py  test_base_functionality.py  test_emulator_connectivity.py  test_tool_functionality.py
e2e/python/: __init__.py  framework.py  test_runner.py
e2e/python/test_cases/: __init__.py  base_tests.py  tool_tests.py
e2e/scripts/: emulator.sh  generate-cert.sh  test-framework.sh
examples/: agent.py
src/: main.py
src/common/: __init__.py  client.py  config.py  discovery.py  hosts.py  server.py  validation.py
src/tools/: __init__.py  endpoints.py  get.py  servers.py
test/: conftest.py  utils.py
test/common/: test_client_retry.py  test_discovery.py  test_main.py  test_validation.py
test/complex/: test_error_scenarios.py
test/integration/: test_client_integration.py
test/property/: test_property_based.py
test/tools/: test_endpoints.py  test_get.py  test_servers.py
