
[project]
name = "mcp-redfish"
version = "0.1.0"
description = "MCP Server for Redfish API Integration"
authors = [{name = "Nokia"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redfish",
    "python-dotenv",
    "fastmcp"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
addopts = "-v"
