
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "mcp-redfish"
version = "0.1.0"
description = "MCP Server for Redfish API Integration - A natural language interface for managing Redfish-enabled infrastructure"
authors = [{name = "Nokia", email = "opensource@nokia.com"}]
maintainers = [{name = "Nokia", email = "opensource@nokia.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
keywords = ["mcp", "redfish", "server", "api", "infrastructure", "management"]
dependencies = [
    "redfish",
    "python-dotenv",
    "fastmcp",
    "tenacity>=8.0.0"
]

[project.urls]
Homepage = "https://github.com/nokia/mcp-redfish"
Repository = "https://github.com/nokia/mcp-redfish"
Documentation = "https://github.com/nokia/mcp-redfish#readme"
"Bug Tracker" = "https://github.com/nokia/mcp-redfish/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
mcp-redfish = "src.main:main"

[dependency-groups]
dev = [
    "bandit[toml]>=1.8.6",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Relaxed for external libraries
disallow_incomplete_defs = false  # Relaxed for external libraries
check_untyped_defs = true
disallow_untyped_decorators = false  # Relaxed for FastMCP decorators
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = false  # Disable unreachable code warnings
strict_equality = true
ignore_missing_imports = true  # Ignore missing stubs for external libraries
# Handle src layout - simplified to avoid duplicate module detection
files = ["src", "e2e/python"]
exclude = [
    "test/.*",
    ".*/__pycache__/.*"
]
# Namespace packages configuration for e2e modules
namespace_packages = true

[tool.ruff]
target-version = "py312"  # Use py312 for pre-commit compatibility
line-length = 88

[tool.ruff.format]
# Ruff formatter settings (Black-compatible)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by ruff format
    "E203",  # whitespace before ':', handled by ruff format
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["B011", "B018", "E402"]  # E402: Allow module imports after sys.path modifications
"e2e/**/*.py" = ["B011", "B018", "E402"]   # E402: Allow module imports after sys.path modifications

[tool.ruff.lint.isort]
known-first-party = ["src", "common", "tools"]
known-local-folder = ["test", "e2e"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.coverage.run]
source = ["src"]
omit = [
    "test/*",
    "e2e/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
